[project]
name = "text-dedup"
version = "0.4.0"
description = "All-in-one text deduplication tools"
authors = [{ name = "Chenghao Mou", email = "mouchenghao@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cloudpickle>=3.1.1",
    "datasets>=3.6.0",
    "ftfy>=6.3.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "regex>=2024.11.6",
    "scipy>=1.13.1",
    "tqdm>=4.67.1",
    "typing-extensions>=4.13.2",
    "xxhash>=3.5.0",
]

[project.urls]
Homepage = "https://ChenghaoMou.github.io/text-dedup/"
Repository = "https://github.com/ChenghaoMou/text-dedup"
Documentation = "https://ChenghaoMou.github.io/text-dedup/"

[project.optional-dependencies]
datasets = [
    "datasets>=3.6.0",
]
report = [
    "gradio>=4.44.1",
    "gradio-rangeslider>=0.0.8",
    "plotly>=6.1.1",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "types-tqdm>=4.67.0.20250516",
    "types-regex>=2024.11.6.20250403",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = false
ignore_missing_imports = true
follow_untyped_imports = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.bandit]
exclude = ["tests/*"]

[tool.uv.workspace]
members = ["extensions/rust"]
