[project]
name = "text-dedup"
version = "0.4.0"
description = "All-in-one text deduplication tools"
authors = [{ name = "Chenghao Mou", email = "mouchenghao@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.12,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bitarray>=3.7.1",
    "datasets>=4.0.0",
    "ftfy>=6.3.1",
    "polars>=1.32.3",
    "polars-grouper>=0.3.0",
    "pydantic-settings>=2.9.1",
    "rbloom>=1.5.2",
    "regex>=2024.11.6",
    "scikit-learn>=1.8.0",
    "scipy>=1.13.1",
    "typing-extensions>=4.13.2",
    "xxhash>=3.5.0",
]

[project.urls]
Homepage = "https://ChenghaoMou.github.io/text-dedup/"
Repository = "https://github.com/ChenghaoMou/text-dedup"
Documentation = "https://ChenghaoMou.github.io/text-dedup/"

[project.optional-dependencies]
datasets = []
report = ["gradio>=4.44.1", "gradio-rangeslider>=0.0.8", "plotly>=6.1.1"]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "types-regex>=2024.11.6.20250403",
    "scalene>=1.5.51",
    "scipy-stubs>=1.16.1.1",
    "gradio>=5.39.0",
    "plotly>=6.2.0",
    "gradio-rangeslider>=0.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportUnusedCallResult = false

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = false
ignore_missing_imports = true
follow_untyped_imports = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov-config=.coveragerc --cov=src --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true
omit = [
    "tests/*",
    "src/text_dedup/config/algorithms/__init__.py",
    "src/text_dedup/config/__init__.py",
    "src/text_dedup/config/io/__init__.py",
    "src/text_dedup/utils/ftfy_utils.py",
    "src/text_dedup/utils/logger.py",
    "src/text_dedup/utils/progress.py",
    "src/text_dedup/utils/timer.py",
    "src/text_dedup/utils/env.py",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.bandit]
exclude = ["tests/*"]
